force-app/main/default/objects/PageToItem__c/PageToItem__c.object-meta.xml
<CustomObject>
    <description>This is a junction object that links contentblockitems to a page. Working with a junction object makes content items re-usable across different pages.</description>
    <label>PageItem</label>
    <nameField>
        <displayFormat>ITEM-{00000}</displayFormat>
        <label>PageToItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PageItem</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>