force-app/main/default/objects/PageToItem__c/fields/ContentBlockItem__c.field-meta.xml
<CustomField>
    <fullName>ContentBlockItem__c</fullName>
    <label>ContentBlockItem</label>
    <referenceTo>ContentBlockItem__c</referenceTo>
    <relationshipLabel>PageItem</relationshipLabel>
    <relationshipName>PageItem</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>