force-app/main/default/objects/PageToItem__c/fields/Display_in_Contentblock__c.field-meta.xml
<CustomField>
    <fullName>Display_in_Contentblock__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Display in Contentblock</label>
    <length>255</length>
    <type>Text</type>
</CustomField>